to be able to pull

--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -4436,6 +4436,263 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team             object\n",
+      "Opponent Team    object\n",
+      "Date             object\n",
+      "Site             object\n",
+      "Incident         object\n",
+      "Time             object\n",
+      "VAR used         object\n",
+      "Label             int64\n",
+      "Minute           object\n",
+      "dtype: object\n",
+      "                       Team      Opponent Team      Date Site  \\\n",
+      "7    Brighton & Hove Albion          Tottenham   Dec. 26    A   \n",
+      "11   Brighton & Hove Albion            Burnley   July 26    A   \n",
+      "37                  Burnley        Aston Villa  Sept. 28    A   \n",
+      "42                  Burnley        Aston Villa    Jan. 1    H   \n",
+      "53              Southampton             Wolves   Oct. 19    A   \n",
+      "56              Southampton     Crystal Palace   Dec. 28    H   \n",
+      "58              Southampton          Leicester   Jan. 11    A   \n",
+      "64                Liverpool            Chelsea  Sept. 22    A   \n",
+      "69                Liverpool             Wolves   Dec. 29    H   \n",
+      "95        Tottenham Hotspur            Norwich   Dec. 28    A   \n",
+      "108         Manchester City   Sheffield United   Dec. 29    H   \n",
+      "117         Manchester City            Norwich   July 26    H   \n",
+      "130                 Everton           Man City    Jan. 1    A   \n",
+      "137         AFC Bournemouth           Brighton   Dec. 28    A   \n",
+      "160                 Watford          Liverpool   Dec. 14    A   \n",
+      "171                West Ham           Man City   Aug. 10    H   \n",
+      "173                West Ham           Brighton   Aug. 17    A   \n",
+      "1    Brighton & Hove Albion        Aston Villa   Oct. 19    A   \n",
+      "17        Manchester United          Liverpool   Jan. 19    A   \n",
+      "18        Manchester United            Chelsea   Feb. 17    A   \n",
+      "27           Crystal Palace            Arsenal   Oct. 27    A   \n",
+      "75           Leicester City            Burnley   Oct. 21    H   \n",
+      "207            Norwich City            Chelsea   Aug. 24    H   \n",
+      "5    Brighton & Hove Albion  Sheffield United    Dec. 21    H   \n",
+      "9    Brighton & Hove Albion            Everton   Jan. 11    A   \n",
+      "13        Manchester United          Liverpool   Oct. 20    H   \n",
+      "20        Manchester United            Watford   Feb. 23    H   \n",
+      "43                  Burnley        Bournemouth   Feb. 22    H   \n",
+      "44                  Burnley        Bournemouth   Feb. 22    H   \n",
+      "55              Southampton           West Ham   Dec. 14    H   \n",
+      "71                Liverpool           Man City    July 2    A   \n",
+      "72           Leicester City             Wolves   Aug. 11    H   \n",
+      "87        Tottenham Hotspur           Man City   Aug. 17    A   \n",
+      "101       Tottenham Hotspur    AFC Bournemouth    July 9    A   \n",
+      "150                 Chelsea           West Ham   Nov. 30    H   \n",
+      "169             Aston Villa     Crystal Palace   July 12    H   \n",
+      "195        Sheffield United           West Ham   Jan. 10    H   \n",
+      "197        Sheffield United          Tottenham    July 2    H   \n",
+      "215            Norwich City          Leicester   Feb. 28    H   \n",
+      "3    Brighton & Hove Albion          Leicester   Nov. 23    H   \n",
+      "103         Manchester City           West Ham   Aug. 10    A   \n",
+      "107         Manchester City             Wolves   Dec. 27    A   \n",
+      "121                 Arsenal            Norwich    Dec. 1    A   \n",
+      "10   Brighton & Hove Albion           West Ham    Feb. 1    A   \n",
+      "68                Liverpool             Wolves   Dec. 29    H   \n",
+      "124                 Arsenal           West Ham   March 7    H   \n",
+      "2    Brighton & Hove Albion            Everton   Oct. 26    H   \n",
+      "14        Manchester United            Norwich   Oct. 27    A   \n",
+      "15        Manchester United            Norwich   Oct. 27    A   \n",
+      "16        Manchester United           Man City    Dec. 7    A   \n",
+      "26           Crystal Palace            Arsenal   Oct. 27    A   \n",
+      "35           Crystal Palace        Aston Villa   July 12    A   \n",
+      "41                  Burnley            Watford   Nov. 23    A   \n",
+      "44                  Burnley        Bournemouth   Feb. 22    H   \n",
+      "50                Newcastle        Southampton   March 7    A   \n",
+      "62              Southampton        Bournemouth   July 19    A   \n",
+      "97        Tottenham Hotspur        Aston Villa   Feb. 16    A   \n",
+      "98        Tottenham Hotspur         Man United   June 19    H   \n",
+      "106         Manchester City             Wolves   Dec. 27    A   \n",
+      "111         Manchester City          Tottenham    Feb. 2    A   \n",
+      "112         Manchester City          Leicester   Feb. 22    A   \n",
+      "126                 Arsenal            Watford   July 26    H   \n",
+      "133                 Everton          Leicester    July 1    H   \n",
+      "152                 Chelsea          Tottenham   Dec. 22    A   \n",
+      "158                 Watford            Chelsea    Nov. 2    H   \n",
+      "166             Aston Villa   Sheffield United   Dec. 14    A   \n",
+      "186                West Ham         Man United   July 22    A   \n",
+      "205                  Wolves        Southampton   Jan. 18    A   \n",
+      "32           Crystal Palace    Manchester City   Jan. 18    A   \n",
+      "35           Crystal Palace        Aston Villa   July 12    A   \n",
+      "80           Leicester City        Southampton   Jan. 11    H   \n",
+      "128                 Everton          Leicester    Dec. 1    A   \n",
+      "\n",
+      "                                              Incident        Time VAR used  \\\n",
+      "7                harry kane goal ruled out for offside  24thminute      FOR   \n",
+      "11   jay rodriguez goal ruled out for offside again...  57thminute      FOR   \n",
+      "37   goal for villa's john mcginn ruled out on revi...  25thminute      FOR   \n",
+      "42   goal for villa's jack grealish ruled out on re...  11thminute      FOR   \n",
+      "53   raul jimenez goal ruled out for offside agains...  42ndminute      FOR   \n",
+      "56   goal for max meyer ruled out for offside by wi...  15thminute      FOR   \n",
+      "58              jonny evans goal ruled out for offside  90thminute      FOR   \n",
+      "64   chelsea goal ruled out after mason mount was o...  27thminute      FOR   \n",
+      "69   goal for pedro neto ruled out for offside in t...  45thminute      FOR   \n",
+      "95              teemu pukki goal ruled out for offside  33rdminute      FOR   \n",
+      "108         goal for lys mousset ruled out for offside  29thminute      FOR   \n",
+      "117      goal for onel hernandez ruled out for offside   7thminute      FOR   \n",
+      "130  goal for phil foden ruled out for offside in b...  12thminute      FOR   \n",
+      "137                dan burn goal ruled out for offside  58thminute      FOR   \n",
+      "160              sadio mane goal ruled out for offside  51stminute      FOR   \n",
+      "171  city goal for gabriel jesus ruled out for an o...  53rdminute      FOR   \n",
+      "173  brighton goal for leandro trossard ruled out f...  27thminute      FOR   \n",
+      "1    conor hourihane goal ruled out for a foul by w...  42ndminute      FOR   \n",
+      "17   roberto firmino goal disallowed for foul on da...  25thminute      FOR   \n",
+      "18   kurt zouma goal disallowed for foul on brandon...  55thminute      FOR   \n",
+      "27   sokratis goal disallowed for foul by calum cha...  83rdminute      FOR   \n",
+      "75   jonny evans own goal ruled out due to a foul b...  80thminute      FOR   \n",
+      "207  chelsea goal for kurt zouma disallowed for a f...  77thminute      FOR   \n",
+      "5                john egan goal ruled out for handball   8thminute      FOR   \n",
+      "9    goal for dominic calvert-lewin ruled out for h...  75thminute      FOR   \n",
+      "13              sadio mane goal ruled out for handball  43rdminute      FOR   \n",
+      "20   goal for troy deeney disallowed for handball b...  52ndminute      FOR   \n",
+      "43   goal for josh king ruled out for handball in b...  22ndminute      FOR   \n",
+      "44   goal for harry wilson ruled out for handball b...  57thminute      FOR   \n",
+      "55     goal for michail antonio ruled out for handball  52ndminute      FOR   \n",
+      "71   city goal for riyad mahrez ruled out for handb...  90thminute      FOR   \n",
+      "72   wolves goal for leander dendoncker disallowed ...  51stminute      FOR   \n",
+      "87   city goal for gabriel jesus ruled out for hand...  90thminute      FOR   \n",
+      "101  goal for callum wilson ruled out for handball ...  90thminute      FOR   \n",
+      "150    goal for michail antonio ruled out for handball  67thminute      FOR   \n",
+      "169          mamadou sakho goal ruled out for handball   7thminute      FOR   \n",
+      "195  goal for robert snodgrass ruled out for handba...  90thminute      FOR   \n",
+      "197  goal for harry kane ruled out for handball in ...  32ndminute      FOR   \n",
+      "215  goal for kelechi iheanacho disallowed for hand...  49thminute      FOR   \n",
+      "3    jamie vardy penalty retaken after james maddis...  80thminute      FOR   \n",
+      "103  missed city penalty retaken due to encroachmen...  86thminute      FOR   \n",
+      "107  missed city penalty retaken due to encroachmen...  25thminute      FOR   \n",
+      "121  pierre-emerick aubameyang missed penalty retak...  29thminute      FOR   \n",
+      "10   goal for glenn murray allowed after incorrect ...  79thminute      FOR   \n",
+      "68   goal for sadio mane given after originally rul...  42ndminute      FOR   \n",
+      "124  alexandre lacazette goal allowed after incorre...  78thminute      FOR   \n",
+      "2    penalty awarded (scored by neil maupay) for fo...  78thminute      FOR   \n",
+      "14   penalty awarded (missed by marcus rashford) fo...  25thminute      FOR   \n",
+      "15   penalty awarded (missed by anthony martial) fo...  41stminute      FOR   \n",
+      "16   penalty awarded (scored by marcus rashford) fo...  23rdminute      FOR   \n",
+      "26   penalty awarded for foul by calum chambers on ...  32ndminute      FOR   \n",
+      "35   penalty cancelled, awarded for foul on jack gr...  47thminute      FOR   \n",
+      "41   penalty (scored by barnes) awarded for foul on...  80thminute      FOR   \n",
+      "44   goal for harry wilson ruled out for handball b...  57thminute      FOR   \n",
+      "50      penalty awarded for handball by sofiane boufal  40thminute      FOR   \n",
+      "62   penalty awarded (missed by danny ings) for han...  57thminute      FOR   \n",
+      "97   penalty (missed by son heung-min but scored on...  45thminute      FOR   \n",
+      "98   penalty awarded for a foul on bruno fernandes ...  91stminute      FOR   \n",
+      "106  penalty awarded (missed by raheem sterling) fo...  21stminute      FOR   \n",
+      "111  penalty (missed by ilkay gundogan) awarded for...  38thminute      FOR   \n",
+      "112  penalty (missed by sergio aguero) awarded for ...      minute      FOR   \n",
+      "126  penalty (scored by pierre-emerick aubameyang) ...   2ndminute      FOR   \n",
+      "133  penalty awarded (scored by gylfi sigurdsson) f...  13thminute      FOR   \n",
+      "152  penalty (scored by willian) awarded for foul b...  45thminute      FOR   \n",
+      "158  penalty (scored by deulofeu) awarded for trip ...  77thminute      FOR   \n",
+      "166  penalty awarded (missed by jack grealish) for ...  76thminute      FOR   \n",
+      "186  penalty awarded for a handball by paul pogba (...  45thminute      FOR   \n",
+      "205  penalty awarded (scored by raul jimenez) for f...  65thminute      FOR   \n",
+      "32   penalty for handball against jairo riedewald c...  72ndminute      FOR   \n",
+      "35   penalty cancelled, awarded for foul on jack gr...  47thminute      FOR   \n",
+      "80   penalty for southampton cancelled for offside ...  63rdminute      FOR   \n",
+      "128  penalty for foul on ben chilwell by mason holg...  34thminute      FOR   \n",
+      "\n",
+      "     Label Minute  \n",
+      "7        1     24  \n",
+      "11       1     57  \n",
+      "37       1     25  \n",
+      "42       1     11  \n",
+      "53       1     42  \n",
+      "56       1     15  \n",
+      "58       1     90  \n",
+      "64       1     27  \n",
+      "69       1     45  \n",
+      "95       1     33  \n",
+      "108      1     29  \n",
+      "117      1      7  \n",
+      "130      1     12  \n",
+      "137      1     58  \n",
+      "160      1     51  \n",
+      "171      1     53  \n",
+      "173      1     27  \n",
+      "1        2     42  \n",
+      "17       2     25  \n",
+      "18       2     55  \n",
+      "27       2     83  \n",
+      "75       2     80  \n",
+      "207      2     77  \n",
+      "5        3      8  \n",
+      "9        3     75  \n",
+      "13       3     43  \n",
+      "20       3     52  \n",
+      "43       3     22  \n",
+      "44       3     57  \n",
+      "55       3     52  \n",
+      "71       3     90  \n",
+      "72       3     51  \n",
+      "87       3     90  \n",
+      "101      3     90  \n",
+      "150      3     67  \n",
+      "169      3      7  \n",
+      "195      3     90  \n",
+      "197      3     32  \n",
+      "215      3     49  \n",
+      "3        4     80  \n",
+      "103      4     86  \n",
+      "107      4     25  \n",
+      "121      4     29  \n",
+      "10       5     79  \n",
+      "68       5     42  \n",
+      "124      5     78  \n",
+      "2        6     78  \n",
+      "14       6     25  \n",
+      "15       6     41  \n",
+      "16       6     23  \n",
+      "26       6     32  \n",
+      "35       6     47  \n",
+      "41       6     80  \n",
+      "44       6     57  \n",
+      "50       6     40  \n",
+      "62       6     57  \n",
+      "97       6     45  \n",
+      "98       6     91  \n",
+      "106      6     21  \n",
+      "111      6     38  \n",
+      "112      6         \n",
+      "126      6      2  \n",
+      "133      6     13  \n",
+      "152      6     45  \n",
+      "158      6     77  \n",
+      "166      6     76  \n",
+      "186      6     45  \n",
+      "205      6     65  \n",
+      "32       7     72  \n",
+      "35       7     47  \n",
+      "80       7     63  \n",
+      "128      7     34  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Lets extract the integer value from the Time collumn to use in further analysis\n",
+    "letters = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "incidents_labeled['Time'] = incidents_labeled['Time'].str.replace(\" \",\"\")\n",
+    "incidents_labeled['Minute'] = list(map(lambda x: x.lower().strip(letters)   ,  incidents_labeled['Time']))\n",
+    "incidents_labeled['Minute'] = incidents_labeled['Minute'].astype(str)\n",
+    "#incidents_labeled['Minute'] = incidents_labeled['Minute'].astype(int)\n",
+    "\n",
+    "print (incidents_labeled.dtypes)\n",
+    "\n",
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
+    "    print(incidents_labeled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": false
