--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -4583,6 +4583,8 @@
     "5. A goal allowed after being disallowed by the referees\n",
     "6. A penalty awarded\n",
     "7. A penalty cancelled \n",
+    "8. A redcard given\n",
+    "9. A redcard cancelled\n",
     "\n",
     "To represent the data, we will first display a table of all incidents, then a plot showing the number of incidents of this type per team."
    ]
@@ -7067,7 +7069,7 @@
     "\n",
     "- Penalties awarded > retaken = cancelled\n",
     "\n",
-    "110 total: Incident 44 is counted twice: https://youtu.be/rY6IkCrDjRo?t=25"
+    "110 total: Incident 44 is counted twice: https://youtu.be/rY6IkCrDjRo?t=25, ruled out for handball + pen"
    ]
   },
   {
@@ -8523,6 +8525,14 @@
     "# We plot the data\n",
     "\n",
     "ipm = incidents_per_month.plot.bar(x='Month', y='VAR uses')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain gap between march and june + dec (boxing day, etc…) \n",
+    "Analysing this wouldn't be useful as the season changed because of covid and it wouldn't be applicable to different years."
    ]
   },
   {
