--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -5721,7 +5721,10 @@
     "# Ethical considerations\n",
     "\n",
     "•How did you get the data (legally...)?\n",
-    "- This data is from ESPN, which is a pretty reliable sports website\n",
+    "- The data is extracted legally\n",
+    "\n",
+    "•Did you check the source?\n",
+    "- This source is from ESPN, which is a pretty reliable sports website\n",
     "\n",
     "•Are there considerations about the analysis you made?\n",
     "- There no considerations about this analysis\n",
