fixxed a few typos

--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -5,6 +5,13 @@
    "metadata": {},
    "source": [
     "# Data Madness\n",
+    "\n",
+    "Julien Elia, i6174954\n",
+    "\n",
+    "Stefan Kischel, i6095091\n",
+    "\n",
+    "Ben Kovacs, i6138936\n",
+    "\n",
     "# How VAR influenced the 2019-20 Premier League Season\n",
     "\n",
     "Video Assisted Referee (VAR) was introduced in the Premier League for the 2019-20 season and brought with it its load of controversies. The aim of this project is to analyse the impact of VAR in its initial season. The research questions are the following:\n",
@@ -1450,7 +1457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see in this plot that more than half of the Premier League teams have had at least one goal ruled out for offside. All these teams had between 1 and 4 diallowed goals for offside. Only Southampton had 6. In this case, it wouldn't be productive to analyse the total number of offsides in the season because not all offsides lead to goals."
+    "We can see in this plot that more than half of the Premier League teams have had at least one goal ruled out for offside. All these teams had between 1 and 4 disallowed goals for offside. Only Southampton had 6. In this case, it wouldn't be productive to analyse the total number of offsides in the season because not all offsides lead to goals."
    ]
   },
   {
@@ -1655,7 +1662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is directly visible that less teams have had goals ruled out for a foul than for an offside. Leicester and Crystal Palace are the only two teams that had goals ruled out for offside but not for a foul. This incident also happens rarely, only 7 times in the season. Manchester United is also wthe only team with 2 goals ruled out for committing a foul."
+    "It is directly visible that less teams have had goals ruled out for a foul than for an offside. Leicester and Crystal Palace are the only two teams that had goals ruled out for offside but not for a foul. This incident also happens rarely, only 7 times in the season. Manchester United is also the only team with 2 goals ruled out for committing a foul."
    ]
   },
   {
@@ -1664,7 +1671,7 @@
    "source": [
     "## C) Goals ruled out for a handball (by the attacking team)\n",
     "\n",
-    "Let's takt a look at the amount of goals ruled out for a handball committed by the attacking team."
+    "Let's take a look at the amount of goals ruled out for a handball committed by the attacking team."
    ]
   },
   {
@@ -2136,7 +2143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only 3 teams had to retake penalties this year, Leicester, Manchester City and Arsenal, making it a total of 4 retaken penalties (2 for Manchester City) in the season. This represents only a small (0.04%) portion of the 92 penalties awarded during the season. "
+    "Only 3 teams had to retake penalties this year, Leicester, Manchester City and Arsenal, making it a total of 4 retaken penalties (2 for Manchester City) in the season. This represents only a small (4.3%) portion of the 92 penalties awarded during the season. "
    ]
   },
   {
@@ -2377,7 +2384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not a lot of goals have been allowed by VAR after being originally disallowed. Bournemouth, Arsenal and Crystal Palace are the only teams with 3 goals allowed after being declined."
+    "Not a lot of goals have been allowed by VAR after being originally disallowed. Bournemouth, Arsenal and Crystal Palace are the only teams with 2 goals allowed after being declined."
    ]
   },
   {
@@ -3180,7 +3187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Leicester and Norwich are the two teams with the most red cards (2) given because of the VAR. 7 teams had red cards received because of the VAR. In total, according to the official Premier League Website (https://www.premierleague.com/stats/top/clubs/total_red_card?se=274), only 3 teams didn't receive any red card during the season. Furthermore, the two teams that stand out in this graph are not the teams with the most redcards. They both had 3 red cards during the season, so only one red card per team was not given because of VAR."
+    "Leicester and Norwich are the two teams with the most red cards (2) given because of the VAR. 7 teams hav received red cards because of the VAR. In total, according to the official Premier League Website (https://www.premierleague.com/stats/top/clubs/total_red_card?se=274), only 3 teams didn't receive any red card during the season. Furthermore, the two teams that stand out in this graph are not the teams with the most redcards. They both had 3 red cards during the season, so only one red card per team was not given because of VAR."
    ]
   },
   {
@@ -3440,7 +3447,7 @@
     "The total amount of VAR Incidents during the season is 109. Strangely, this graph shows 110 incidents.\n",
     "After some investigation, it was discovered that one incident has been counted twice; entry 44 in the table. During the Burnley-Bournemouth game on the 22nd of February, one incident involved two categories: \"Goal for Harry Wilson ruled out for handball by Bournemouth's Adam Smith, penalty awarded and scored by Jay Rodriguez\". As you can see in this video: https://youtu.be/rY6IkCrDjRo?t=25, a Bournemouth player touched the ball with his hand in his own penalty area before starting a counter attack that ended with a goal. After a VAR review, the referee disallowed the goal and gave a penalty to Burnley. We therefore chose to keep this incident in the two categories \"Goal disallowed for a handball\" and \"Penalty awarded\" because it is an interesting use of VAR.\n",
     "\n",
-    "On top of that, a lot of data cleaning was necessary to obtain this graph. Indeed, some incidents were described in different ways, making our string search inefficient for finding them. We therefore had to improve this search, sometimes adding a search for a special word just to account for one special incident. For example, the incident \"James Tomkins goal ruled out for push by Jordan Ayew\" didn't show up in \"Goals ruled out for a foul\" because the foul is described as a \"push\". To accomodate for this, we displayed a table showing incidents that were not counted in these categories, and we then adapted our string searches.\n",
+    "On top of that, a lot of data cleaning was necessary to obtain this graph. Indeed, some same category incidents were described in different ways, making our string search inefficient for finding them. We therefore had to improve this search, sometimes adding a search for a special word just to account for one special incident. For example, the incident \"James Tomkins goal ruled out for push by Jordan Ayew\" didn't show up in \"Goals ruled out for a foul\" because the foul is described as a \"push\". To accomodate for this, we displayed a table showing incidents that were not counted in these categories, and we then adapted our string searches until said table was empty.\n",
     "\n",
     "Let's now take a more in-depth look at this bar chart and compare it to the Premier League Goals, Penalties and Red cards data from the official Premier League website and from MyFootballStats.com.\n",
     "\n",
@@ -4982,7 +4989,7 @@
    "metadata": {},
    "source": [
     "The 2019-2020 started on 9th August 2019 and ended on 26th of July, 2020. The season was suspended from 13 March 2020 to 17 June 2020. This explains the low amount of incidents in the months of March and June, and the total absence of incidents in April and May. Excluding these 4 months, the average amount of incidents per game is 11.875. \n",
-    "Furthermore, each team plays 3 to 4 games per month. In July 2020, the teams had to catch up the games that they didn't play during April and May. This led to a higher number of games in July, and therefore a highest number of VAR uses.\n",
+    "Furthermore, each team plays 3 to 4 games per month. In July 2020, the teams had to catch up the games that they didn't play during April and May. This led to a higher number of games in July, and therefore a high number of VAR uses.\n",
     "The month of December is also well known in the Premier League because of it's high number of games, with each team playing 2 games between Christams and New Year on top of their normal amount of games, leading to a higher number of incidents in December.\n",
     "\n",
     "As this season was marked by the pandemic and the calendar largely affected, this data is not really significant and would have been more interesting to analyse in a study on the effect of the pandemic on the Premier League season. Therefore this analysis will now focus on the repartition of incidents during a game."
@@ -5711,7 +5718,7 @@
    "source": [
     "By analysing the incidents that happen every 5 minutes, we notice that there is no pattern in the way they are layed out.\n",
     "However, if one had to deduct something from this, it could be that a quarter (4/16) handballs happened during the last 5 minutes of the game. Furthermore, there are more red cards given in the 2nd half of the game, or more goals being allowed after being disallowed, but this is also due to the fact that there are more incidents in the second half.\n",
-    "In conclusion, we can say that VAR is most used in the 2nd half and towards the end of the game, specially around the 75th minute. This might be due to the fact that the game is more engaging in the 2nd half, and that more things happen. "
+    "In conclusion, we can say that VAR is most used in the 2nd half and towards the end of the game, specially around the 75th minute. This might be due to the fact that the game is more engaging in the 2nd half, and that more things happen. A more in depth analysis would require a bigger dataset which is not available yet since VAR has only been used for one full season."
    ]
   },
   {
@@ -5759,7 +5766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
